<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#7fcbd7"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_app"
                android:textColor="#fff"
                android:textSize="24sp"
                app:fontFamily="sans-serif-condensed"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/chiqish"
                android:padding="16dp"
                android:tint="@color/white"
                android:layout_gravity="start"/>

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/battery_charging_notifies_when_the_device_starts_or_stops_charging"
                android:justificationMode="inter_word"
                tools:ignore="UnusedAttribute" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                tools:ignore="UnusedAttribute"
                android:text="@string/network_connections_monitors_changes_in_network_type_e_g_switching_from_wi_fi_to_mobile_data"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                tools:ignore="UnusedAttribute"
                android:text="@string/airplane_mode_indicates_when_airplane_mode_is_enabled_or_disabled"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                tools:ignore="UnusedAttribute"
                android:text="@string/_4_bluetooth_status_alerts_when_bluetooth_is_turned_on_off_or_connected_disconnected"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:justificationMode="inter_word"
                tools:ignore="UnusedAttribute"
                android:layout_marginTop="8dp"
                android:text="@string/wi_fi_status_tracks_when_wi_fi_is_connected_disconnected_or_toggled"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                tools:ignore="UnusedAttribute"
                android:text="@string/mobile_internet_status_alerts_when_mobile_data_is_turned_on_or_off"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                tools:ignore="UnusedAttribute"
                android:text="@string/screen_status_informs_about_the_screen_turning_on_or_off"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>