<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#7fcbd7"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/events"
                android:textColor="#fff"
                android:textSize="24sp"
                app:fontFamily="sans-serif-condensed" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/info"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="8dp"
                android:padding="4dp"
                android:tint="@color/white"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/info_1" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp">

                <FrameLayout
                    android:id="@+id/internet"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="14dp"
                        android:padding="10dp"
                        android:src="@drawable/network_icon" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="80dp"
                        android:text="@string/internet"
                        android:textSize="24sp"
                        app:fontFamily="sans-serif-condensed" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/internetSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="24dp"
                        android:background="@color/white" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp">

                <FrameLayout
                    android:id="@+id/battery"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="14dp"
                        android:padding="8dp"
                        android:src="@drawable/batery"
                        android:tint="#03A9F4" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="80dp"
                        android:text="@string/battery_event"
                        android:textSize="24sp"
                        app:fontFamily="sans-serif-condensed" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/batterySwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="24dp" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp">

                <FrameLayout
                    android:id="@+id/screen"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="14dp"
                        android:padding="8dp"
                        android:src="@drawable/screen" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="80dp"
                        android:text="@string/screen_evant"
                        android:textSize="24sp"
                        app:fontFamily="sans-serif-condensed" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/screenSwitch"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="24dp" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"

                >

                <FrameLayout
                    android:id="@+id/pilot"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="14dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_pilot" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="80dp"
                        android:text="@string/pilot_event"
                        android:textSize="24sp"
                        app:fontFamily="sans-serif-condensed" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/pilotSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="24dp" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"

                >

                <FrameLayout
                    android:id="@+id/hotspot"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="14dp"
                        android:padding="10dp"
                        android:src="@drawable/mobil" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="80dp"
                        android:text="@string/hotspot"
                        android:textSize="24sp"
                        app:fontFamily="sans-serif-condensed" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/hotspotSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="24dp" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"

                >

                <FrameLayout
                    android:id="@+id/wifi"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="14dp"
                        android:padding="10dp"
                        android:src="@drawable/wifi" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="80dp"
                        android:text="@string/wi_fi"
                        android:textSize="24sp"
                        app:fontFamily="sans-serif-condensed" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/wifiSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="24dp" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                app:cardElevation="10dp"

                >

                <FrameLayout
                    android:id="@+id/bluetooth"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="14dp"
                        android:padding="10dp"
                        android:src="@drawable/bluetooth" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="80dp"
                        android:text="@string/bluetooth_event"
                        android:textSize="24sp"
                        app:fontFamily="sans-serif-condensed" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/bluetoothSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="24dp" />

                </FrameLayout>

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>